@@ -1681,77 +1681,88 @@ static int process_command_args(int argc, char** argv) {
 
 		if(val == "--help" || val == "-h") {
 			// When adding items don't forget to update doc/man/wesnoth.6
+			// Options are sorted alphabetically by --long-option.
+			// Please keep the output to 80 chars per line.
 			std::cout << "usage: " << argv[0]
-			<< " [OPTIONS] [DATA-DIRECTORY]\n"
-			<< "  --bpp number                 sets BitsPerPixel value. Example: --bpp 32\n"
-			<< "  -d, --debug                  shows extra debugging information and enables\n"
-			<< "                               additional command mode options in-game.\n"
+			<< " [<options>] [<data-directory>]\n"
+			<< "Available options:\n"
+			<< "  --bpp <number>               sets BitsPerPixel value. Example: --bpp 32\n"
+			<< "  -c, --campaign               goes directly to the campaign selection menu.\n"
+			<< "  --config-dir <name>          sets the path of the user config directory to\n"
+			<< "                               $HOME/<name> or %APPDATA%\\<name> for windows.\n"
+			<< "  --config-path                prints the path of the user config directory and\n"
+			<< "                               exits.\n"
+			<< "  -d, --debug                  enables additional command mode options in-game.\n"
+			<< "  --dummylocales               enables dummy locales for switching to non-system\n"
+			<< "                               locales.\n"
 #ifndef DISABLE_EDITOR2
-			<< "  -e, --editor                 starts editor2 not showing title screen.\n"
+			<< "  -e, --editor                 starts the in-game map editor directly.\n"
 #endif
+			<< "  --fps                        displays the number of frames per second the\n"
+			<< "                               game is currently running at, in a corner of\n"
+			<< "                               the screen.\n"
 			<< "  -f, --fullscreen             runs the game in full screen mode.\n"
-			<< "  --fps                        displays the number of frames per second the game\n"
-			<< "                               is currently running at, in a corner of the screen.\n"
-			<< "  --gunzip INFILE.gz           decompresses a file (INFILE.gz) in gzip format\n"
+			<< "  --gunzip <infile>.gz         decompresses a file (<infile>.gz) in gzip format\n"
 			<< "                               and stores it without the .gz suffix.\n"
-			<< "                               INFILE.gz will be removed.\n"
-			<< "  --gzip INFILE                compresses a file (INFILE) in gzip format,\n"
-			<< "                               stores it as INFILE.gz and removes INFILE.\n"
+			<< "                               <infile>.gz will be removed.\n"
+			<< "  --gzip <infile>              compresses a file (<infile>) in gzip format,\n"
+			<< "                               stores it as <infile>.gz and removes <infile>.\n"
 			<< "  -h, --help                   prints this message and exits.\n"
-			<< "  --load FILE                  loads the save FILE from the standard save\n"
+			<< "  -l, --load <file>            loads the save <file> from the standard save\n"
 			<< "                               game directory.\n"
 #ifndef DISABLE_EDITOR2
-			<< "                               When launching the map editor via -e, the map FILE is\n"
-			<< "                               loaded, relative to the current directory.\n"
+			<< "                               When launching the map editor via -e, the map\n"
+			<< "                               <file> is loaded, relative to the current\n"
+			<< "                               directory.\n"
 #endif
-			<< "  --with-replay                replays the file SAVEGAME loaded with --load option.\n"
 			<< "  --log-<level>=<domain1>,<domain2>,...\n"
 			<< "                               sets the severity level of the log domains.\n"
 			<< "                               'all' can be used to match any log domain.\n"
 			<< "                               Available levels: error, warning, info, debug.\n"
 			<< "                               By default the 'error' level is used.\n"
-			<< "  --logdomains                 List defined log domains and exit.\n"
+			<< "  --logdomains                 lists defined log domains and exits.\n"
+			<< "  --max-fps                    the maximum fps the game tries to run at. Values\n"
+			<< "                               should be between 1 and 1000, the default is 50.\n"
+			<< "  -m, --multiplayer            starts a multiplayer game. There are additional\n"
+			<< "                               options that can be used as explained below:\n"
+			<< "    --algorithm<number>=value  selects a non-standard algorithm to be used by\n"
+			<< "                               the AI controller for this side.\n"
+			<< "    --controller<number>=value selects the controller for this side.\n"
+			<< "    --era=value                selects the era to be played in by its id.\n"
+			<< "    --exit-at-end              exit Wesnoth at the end of the scenario.\n"
+			<< "    --nogui                    runs the game without the GUI. Must appear before\n"
+			<< "                               --multiplayer to have the desired effect.\n"
+			<< "    --parm<number>=name:value  sets additional parameters for this side.\n"
+			<< "    --scenario=value           selects a multiplayer scenario. The default\n"
+			<< "                               scenario is \"multiplayer_The_Freelands\".\n"
+			<< "    --side<number>=value       selects a faction of the current era for this\n"
+			<< "                               side by id.\n"
+			<< "    --turns=value              sets the number of turns. The default is \"50\".\n"
+			<< "  --no-delay                   runs the game without any delays.\n"
 			<< "  --nocache                    disables caching of game data.\n"
-			<< "  --validcache                 assume that cache is valid (dangerous)\n"
+			<< "  --nomusic                    runs the game without music.\n"
 			<< "  --nosound                    runs the game without sounds and music.\n"
-			<< "  --nomusic                    runs the game without only music.\n"
-			<< "  --max-fps                    the maximum fps the game tries to run at the value\n"
-			<< "                               should be between the 1 and 1000, the default is 50.\n"
-			<< "  --config-path                prints the path to the game config directory and exits.\n"
-			<< "  --config-dir=<path>          set name of game config directory.\n"
-			<< "  --path                       prints the path to the game data directory and exits.\n"
+			<< "  --path                       prints the path to the data directory and exits.\n"
 #ifdef HAVE_PYTHON
-			<< "  --python-api                 prints the runtime documentation for the python API.\n"
+			<< "  --python-api                 prints the runtime documentation for the python\n"
+			<< "                               API.\n"
 #endif
 			<< "  -r, --resolution XxY         sets the screen resolution. Example: -r 800x600\n"
-			<< "  --smallgui                   allow to use screen resolutions down to 800x480\n"
-			<< "                               and resize few interface elements.\n"
+			<< "  --smallgui                   allows to use screen resolutions down to 800x480\n"
+			<< "                               and resizes a few interface elements.\n"
+			<< "  -s, --server [<host>]        connects to the host if specified\n"
+			<< "                               or to the first host in your preferences.\n"
 			<< "  -t, --test                   runs the game in a small test scenario.\n"
+			<< "  --validcache                 assumes that the cache is valid. (dangerous)\n"
 			<< "  -v, --version                prints the game's version number and exits.\n"
 			<< "  -w, --windowed               runs the game in windowed mode.\n"
-			<< "  --no-delay                   run the game without any delays.\n"
-			<< "  -c, --campaign               skip menu, and go directly to campaign selection menu.\n"
-			<< "  -s, --server [host]          skip menu, and connect to the host if specified\n"
-			<< "                               or to the first host in your preferences.\n"
-			<< "  -m, --multiplayer            runs a multiplayer game. There are additional\n"
-			<< "                               options that can be used as explained below:\n"
-			<< "  --algorithm<number>=value    selects a non-standard algorithm to be used by the\n"
-			<< "                               AI controller for this side.\n"
-			<< "  --controller<number>=value   selects the controller for this side.\n"
-			<< "  --era=value                  selects the era to be played in by its id.\n"
-			<< "  --nogui                      runs the game without the GUI. Must appear before\n"
-			<< "                               --multiplayer to have the desired effect.\n"
-			<< "  --parm<number>=name:value    sets additional parameters for this side.\n"
-			<< "  --scenario=value             selects a multiplayer scenario. The default\n"
-			<< "                               scenario is \"multiplayer_The_Freelands\".\n"
-			<< "  --side<number>=value         selects a faction of the current era for this side\n"
-			<< "                               by id.\n"
-			<< "  --turns=value                sets the number of turns. The default is \"50\".\n"
-			<< "  --exit-at-end                exit Wesnoth at end of scenario.\n"
-			<< "  --dummylocales               Enable dummylocales for switching to non-system locale.\n"
-			<< "  --new-widgets                there is a new WIP widget toolkit this switch enables the new toolkit\n"
-			<< "                               (VERY EXPERIMENTAL don't file bug reports since most are known).\n"
-			<< "                               Parts of the library are deemed stable and will work without this switch.\n"
+			<< "  --with-replay                replays the file loaded with the --load option.\n"
+			<< "\n"
+			<< "  --new-widgets                there is a new WIP widget toolkit this switch\n"
+			<< "                               enables the new toolkit (VERY EXPERIMENTAL don't\n"
+			<< "                               file bug reports since most are known).\n"
+			<< "                               Parts of the library are deemed stable and will\n"
+			<< "                               work without this switch.\n"
 			;
 			return 0;
 		} else if(val == "--version" || val == "-v") {
